--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Small business</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    
+    <div class="container section1">
+        <header>
+            <div class="logo-wrapper">
+                <img class="logo" src="./imgs/mainLogo.png" alt="logo">
+            </div>
+            <div class="links-wrapper">
+                <ul>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Resources</a></li>
+                </ul>
+            </div>
+            <div class="buttons">
+                <button class="logIn">Log In</button>
+                <button class="signUp">Sign Up</button>
+            </div>
+        </header>
+        
+        <main>
+            <img class="img1" src="./imgs/yellowStripes.png" alt="yellowStripes">
+            <img class="img2" src="imgs/greenDots.png" alt="dots">
+            <img class="img3" src="imgs/purpleDots.png" alt="dots">
+            <img  class="img4" src="imgs/orangeStripes.png" alt="stripes">
+            <h2 class="heading1">HEADER</h2>
+            <h1>A small business is only <br> as good as its tools. </h1>
+            <p class="text1">We’re different. Flex is the only saas business platform that lets you run <br> your business on one platform, seamlessly across all digital channels.</p>
+            <div class="inputs">
+                <div class="inputter">
+                    <img src="./imgs/email.png" alt="email" class="email">
+                <input class="email" type="email" placeholder="Enter your work email">
+                </div>
+                <button class="access">Get early access</button>
+            </div>
+            <p class="texter">Start your free 14-day trial today, no credit card required.</p>
+        </main>
+
+        <div class="section2 container">
+            <img class="pattern" src="./imgs/Pattern Light.png" alt="pattern">
+            <h3 class="heading2">Join 4,000+ companies already growing</h3>
+            <div class="imgs">
+                <img src="./imgs/jiggle.svg" alt="jiggle" class="img-content">
+                <img src="./imgs/Symtric.svg" alt="Symtric" class="img-content">
+                <img src="./imgs/wishelp.svg" alt="wishelp" class="img-content">
+                <img src="./imgs/resecurb.svg" alt="resecurb" class="img-content">
+                <img src="./imgs/welytics.svg" alt="welytics" class="img-content">
+
+            </div>
+
+            <img src="./imgs/wave.svg" alt="wave" class="wave">
+        </div>
+
+        </header>
+    </div>
 </body>
 </html>
