add insight section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
+    <!-- SECTION1 -->
     <div class="container section1">
         <header>
             <div class="logo-wrapper">
@@ -47,6 +48,7 @@
             <p class="texter">Start your free 14-day trial today, no credit card required.</p>
         </main>
 
+        <!-- SECTION2 -->
         <div class="section2 container">
             <img class="pattern" src="./imgs/Pattern Light.png" alt="pattern">
             <h3 class="heading2">Join 4,000+ companies already growing</h3>
@@ -62,7 +64,85 @@
             <img src="./imgs/wave.svg" alt="wave" class="wave">
         </div>
 
-        </header>
     </div>
+
+    <!-- SECTION3 -->
+
+    <div class="section3"> 
+        <h3 class="features">Features</h3>
+        <h2 class="heading3">Gain more insight into how people use your</h2>
+        <p class="text2">With our integrated CRM, project management, collaboration and invoicing capabilities, <br> you can manage every aspect of your business in one secure platform.</p>
+
+        <div class="crm-wrapper">
+            <div class="top-wrapper">
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Measure your performance</h2>
+                    <p class="text3">Stay connected with your team and <br> make quick decisions wherever <br> you are. </p>
+                </div>
+
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Custom analytics</h2>
+                    <p class="text3">Get a complete sales dashboard in <br> the cloud. See activity, revenue and <br> social metrics all in one place. </p>
+                </div>
+
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Team Management</h2>
+                    <p class="text3">Our calendar lets you know what is <br> happening with customer and <br> projects so you </p>
+                </div>
+
+
+
+            </div>
+            <div class="bottom-wrapper">
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Build your website</h2>
+                    <p class="text3">A tool that lets you build a dream <br> website even if you know nothing <br> about web design or programming.</p>
+                </div>
+
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Connect multiple apps</h2>
+                    <p class="text3">The first business platform to bring <br> together all of your products from <br> one place.</p>
+                </div>
+
+                <div class="card">
+                    <div class="imgg">
+                    <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs">
+                    </div>
+                    <h2 class="headingCrm">Easy setup</h2>
+                    <p class="text3">End to End Business Platform, Sales <br> Management, Marketing <br> Automation, Help Desk</p>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="learn-wrapper">
+            <div class="textss">
+                <h2 class="heading4">The fastest way from <br> idea to live site. Period.</h2>
+                <p class="text3">Flex is a Small SaaS Business. Flex isn’t a <br> traditional company.</p>
+            </div>
+
+            <div class="buttons-wrapper2">
+                <button class="btn1">Get Started</button>
+                <button class="btn2">Learn more</button>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 </html>
