add Using section

--- a/index.html
+++ b/index.html
@@ -144,5 +144,105 @@
 
     </div>
 
+        <!-- SECTION4 -->
+     <div class="section4">
+        <h3 class="features">Features</h3>
+        <h2 class="heading5">Gain more insight into how people use your</h2>
+        <p class="text4">With our integrated CRM, project management, collaboration and invoicing capabilities, <br> you can manage every aspect of your business in one secure platform.</p>
+
+        <div class="big-wrapper">
+            <div class="all-wrapper">
+                <div class="under__wrapper">
+                    <div class="under__wrapper--card">
+                        <div class="imgg">
+                            <img src="./imgs/gmail.png" alt="icon-imgs" class="icon-imgs apps-img ">
+                        </div>
+
+                        <div class="contenter">
+                            <h3 class="heading6">Measure your performance</h3>
+                            <p class="text5">Stay connected with your team and make <br> quick decisions wherever you are. </p>
+                        </div>
+
+                    </div>
+
+                    <div class="under__wrapper--card">
+                        <div class="imgg">
+                            <img src="./imgs/pen.png" alt="icon-imgs" class="icon-imgs apps-img">
+                        </div>
+
+                        <div class="contenter">
+                            <h3 class="heading6">Build your website</h3>
+                            <p class="text5">A tool that lets you build a dream website <br> even if you know nothing about web design or <br> programming.</p>
+                        </div>
+                    </div>
+
+                    <div class="under__wrapper--card">
+                        <div class="imgg">
+                            <img src="./imgs/apps.png" alt="icon-imgs" class="icon-imgs apps-img">
+                        </div>
+                        <div class="contenter">
+                            <h3 class="heading6">Connect multiple apps</h3>
+                            <p class="text5">The first business platform to bring together <br> all of your products from one place.</p>
+                        </div>
+                    </div>
+
+                </div> <!-- under-wrapper  -->
+
+                <div class="img-wrapper">
+                    <img src="./imgs/yellow stripes.png" alt="yellow stripe" class="stripe">
+                    <img src="./imgs/blueDots.png" alt="dots" class="dots">
+                    <img src="./imgs/learningImg.png" alt="learningImg" class="learning">
+                </div>
+
+            </div>  <!-- All-WRAPPER  -->
+
+
+            <div class="all-wrapper">
+                <div class="img-wrapper">
+                    <img src="./imgs/yellow stripes.png" alt="yellow stripe" class="stripe">
+                    <img src="./imgs/blueDots.png" alt="dots" class="dots">
+                    <img src="./imgs/learningImg.png" alt="learningImg" class="learning">
+                </div>
+
+                <div class="right-side">
+                    <h3 class="features">Features</h3>
+                    <h2 class="heading">Gain more insigh <br> into how people <br> use your</h2>
+                    <div class="text">With our integrated CRM, project <br> management, collaboration and invoicing <br> capabilities, you can manage every aspect <br> of your business in one secure platform.</div>
+                    <button class="btn1">Get Started</button>
+
+                </div>
+
+
+
+
+            </div>
+
+            <div class="all-wrapper all-wrapper2">
+                <div class="img-wrapper">
+                    <img src="./imgs/yellow stripes.png" alt="yellow stripe" class="stripe">
+                    <img src="./imgs/blueDots.png" alt="dots" class="dots">
+                    <img src="./imgs/learningImg.png" alt="learningImg" class="learning">
+                </div>
+
+                <div class="right-side">
+                    <h3 class="features">Features</h3>
+                    <h2 class="heading">Gain more insigh <br> into how people <br> use your</h2>
+                    <div class="text">With our integrated CRM, project <br> management, collaboration and invoicing <br> capabilities, you can manage every aspect <br> of your business in one secure platform.</div>
+                    <button class="btn1">Get Started</button>
+
+                </div>
+
+
+
+
+            </div>
+
+
+        </div> <!-- BIG_WRAPPER   -->
+
+
+    </div>    <!-- Section4 -->
+
+
 </body>
 </html>
