add Data section

--- a/index.html
+++ b/index.html
@@ -243,6 +243,34 @@
 
     </div>    <!-- Section4 -->
 
+        <!-- SECTION5 -->
+
+    <div class="section5">
+        <h3 class="features">Features</h3>
+        <h2 class="heading">We believe in the power of data</h2>
+        <div class="text"> Flex is the only business platform that lets you run your business on one platform, <br> seamlessly across all digital channels.</div>
+        <div class="num-wrapper">
+            <div class="num-wrapper--item">
+                <p class="num">235.000</p>
+                <p class="num-wrapper--text">Projects completed</p>
+            </div>
+            <div class="num-wrapper--item">
+                <p class="num">$10m</p>
+                <p class="num-wrapper--text">APR</p>
+            </div>
+            <div class="num-wrapper--item">
+                <p class="num">+50.000</p>
+                <p class="num-wrapper--text">Hours Saved Annually</p>
+            </div>
+            <div class="num-wrapper--item">
+                <p class="num">3.500</p>
+                <p class="num-wrapper--text">Unique Users</p>
+            </div>
+
+
+        </div>
+    </div>
+
 
 </body>
 </html>
