add Work section

--- a/index.html
+++ b/index.html
@@ -271,6 +271,74 @@
         </div>
     </div>
 
+        <!-- SECTION6 -->
+    <div class="section6">
+        <img src="./imgs/BG Wave.png" alt="wave" class="bigWave">
+        <div class="top-div">
+            <div class="lefts">
+                <h3 class="features2">How it works</h3>
+                <h2 class="heading">Gain more insight into <br> how people use your</h2>
+                <p class="text">With our integrated CRM, project management, <br> collaboration and invoicing capabilities, you can <br> manage your business in one secure platform.</p>
+            </div>
+
+            <div class="rights">
+                <img class="play" src="./imgs/Play.png" alt="play">
+                <img src="./imgs/Rectangle 1.png" alt="teacher" class="teacher">
+            </div>
+        </div>
+
+        <div class="bottom-div">
+            <div class="first-line">
+                <div class="carder">
+                    <div class="numGreen">1</div>
+                    <h4 class="heading7">Measure your performance</h4>
+                    <p class="text6">Stay connected with your team and make <br> quick decisions wherever you are.</p>
+                </div>
+
+                <div class="carder">
+                    <div class="numGreen">2</div>
+                    <h4 class="heading7">Custom analytics</h4>
+                    <p class="text6">Get a complete sales dashboard in the <br> cloud. See activity, revenue and social <br> metrics all in one place.</p>
+                </div>
+
+
+                <div class="carder">
+                    <div class="numGreen">3</div>
+                    <h4 class="heading7">Team Management</h4>
+                    <p class="text6">Our calendar lets you know what is <br> happening with customer and projects <br> so you</p>
+                </div>
+
+
+
+            </div>
+
+            <div class="second-line">
+                <div class="carder">
+                    <div class="numGreen">4</div>
+                        <h4 class="heading7">Build your website</h4>
+                        <p class="text6">A tool that lets you build a dream website <br> even if you know nothing about web design <br> or programming.</p>
+                    </div>
+
+                <div class="carder">
+                    <div class="numGreen">5</div>
+                    <h4 class="heading7">Connect multiple apps</h4>
+                    <p class="text6">The first business platform to bring together <br> all of your products from one place.</p>
+                </div>
+
+
+                <div class="carder">
+                    <div class="numGreen">6</div>
+                    <h4 class="heading7">Easy setup</h4>
+                    <p class="text6">End to End Business Platform, Sales <br> Management, Marketing Automation, Help <br> Desk</p>
+                </div>
+
+            </div>  <!-- Second line  -->
+
+            <img src="./imgs/BG Wave.png" alt="wave" class="second_wave">
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
