add Application section

--- a/index.html
+++ b/index.html
@@ -339,6 +339,24 @@
         </div>
     </div>
 
+        <!-- SECTION7 -->
+
+    <div class="section7">
+        <h3 class="features2">Application</h3>
+        <h2 class="heading">Great work starts with your app</h2>
+        <img src="./imgs/pc.png" alt="pc" class="pc">
+        <p class="text">Our philosophy is simple — hire a team of diverse, passionate people and foster a culture <br> that empowers you to do you best work.</p>
+
+            <div class="buttons-wrapper2">
+                <button class="btn1">Learn more</button>
+                <button class="btn2">About us</button>
+            </div>
+
+
+    </div>
+
+
+
 
 </body>
 </html>
